# VecFlow

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_distance.cpp  bench_scalar.cpp
examples/: CMakeLists.txt  word_similarity.cpp
include/vecflow/: allocator.hpp  distance.hpp  flat_index.hpp  hnsw.hpp  index.hpp  types.hpp  vecflow.hpp
src/: CMakeLists.txt  distance_avx2.cpp
tests/: CMakeLists.txt  test_distance.cpp  test_flat_index.cpp  test_hnsw.cpp  test_types.cpp
